--- a/style.css
+++ b/style.css
@@ -1,19 +1,20 @@
+/*websites used are
+    namecheap ( domain)
+    netlify( deploy)
+*/
 /*animation*/
 @keyframes rolling{
     0%{
         transform : translateY(0);
     }
-    25%{
-        transform : translateY(-20%);
+    33%{
+        transform : translateY(-25%);
     }
-    50%{
-        transform : translateY(-40%);
-    }
-    75%{
-        transform : translateY(-60%)
+    66%{
+        transform : translateY(-50%);
     }
     100%{
-        transform : translateY(-80%);
+        transform : translateY(-75%);
     }
 }
 
@@ -41,7 +42,7 @@ body {
 }
 
 .portrait {
-    background-image : url(images/profile.png);
+    background-image : url(images/profile1.jpeg);
     background-size : cover;
     background-position : center;
     padding-top : 56.25% /* 16 : 9 비율 */
