--- a/style.css
+++ b/style.css
@@ -47,7 +47,8 @@ body {
     background-image : url(images/profile1.jpeg);
     background-size : cover;
     background-position : center;
-    padding-top : 56.25% /* 16 : 9 비율 */
+    padding-top : 56.25%; /* 16 : 9 비율 */
+    
 }
 .myself{
     font-size : 120%;
